src/objects/DD_Intake__c.object
<CustomObject>
    <fields>
        <fullName>DD_Assigned_FC_Staff__c</fullName>
        <label>Assigned FC Staff</label>
        <picklist>
            <picklistValues>
                <fullName>Benner, Megan L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cywinski, Sophia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenplate, Vera L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higgins, Melissa A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hudson, Trudi P.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hughes, Amy M.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacobs, Shawnique R.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leggins, Pamela L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKie, Toshonda N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mclain, Monica L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morris, Monica K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reed, Brittany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thompson, Vivian</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Date_Attended_Orientation__c</fullName>
        <label>Date Attended Orientation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Date_Inquiry_Received__c</fullName>
        <label>Date Inquiry Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Date_Orientation_Referred_To__c</fullName>
        <label>Date Orientation Referred To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Date_packet_mailed__c</fullName>
        <label>Date packet mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Follow_Up_Call_1_Made__c</fullName>
        <label>Follow Up Call 1 Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Follow_Up_Call_1_Text__c</fullName>
        <label>Follow Up Call 1 Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Follow_Up_Call_2_Made__c</fullName>
        <label>Follow Up Call 2 Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Follow_Up_Call_2_Text__c</fullName>
        <label>Follow Up Call 2 Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Follow_Up_Call_3_Made__c</fullName>
        <label>Follow Up Call 3 Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Follow_Up_Call_3_Text__c</fullName>
        <label>Follow Up Call 3 Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_How_Did_you_Hear_about_our_Pgm_Other__c</fullName>
        <label>How Did you Hear about our Program?Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_How_Did_you_Hear_about_our_Program__c</fullName>
        <label>How Did you Hear about our Program?</label>
        <picklist>
            <picklistValues>
                <fullName>Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helpline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSCYF Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always wanted to Be a Foster Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DD_Packet_sent_method__c</fullName>
        <label>Packet sent method</label>
        <picklist>
            <picklistValues>
                <fullName>US Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Respite_Only_Yes_No__c</fullName>
        <label>Respite Only (Yes/ No)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Screened_Out_Letter_Sent__c</fullName>
        <label>Screened Out Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Screened_Out_Reason__c</fullName>
        <label>Screened Out Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Screened_Out_Yes_No__c</fullName>
        <label>Screened Out (Yes/ No)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Intake</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Intake Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intakes</pluralLabel>
    <recordTypes>
        <fullName>DD_Foster_Care_Inquiry</fullName>
        <active>true</active>
        <label>Foster Care Inquiry</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Additional_Information_required_Other</fullName>
        <active>true</active>
        <description>When Other  value is selected for How Did you Hear about our Program? field Additional Information should be provided in How Did you Hear about our Program?-Other field</description>
        <errorConditionFormula>AND( 
INCLUDES( DD_How_Did_you_Hear_about_our_Program__c  , &quot;Other&quot;), 
ISBLANK( DD_How_Did_you_Hear_about_our_Pgm_Other__c ))</errorConditionFormula>
        <errorDisplayField>DD_How_Did_you_Hear_about_our_Pgm_Other__c</errorDisplayField>
        <errorMessage>Please provide the details of How Did you Hear about our Program?</errorMessage>
    </validationRules>
</CustomObject>